--- a/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
@@ -443,7 +443,8 @@
     }
 
     .nb_prdlisting_pgsec .breadCrumbtopsec {
-/*        flex-direction: column;*/
+        flex-direction: column;
+        align-items: flex-start;
     }
 
         .nb_prdlisting_pgsec .breadCrumbtopsec .nb_bread_crumbwrap nav ol {
